fix: urlcorregida.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Acuario - Dashboard Acuario 🐟</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="frontend/style.css">
+
 
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
@@ -34,6 +35,6 @@
     </div>
 
     <!-- Tu script -->
-    <script src="script.js"></script>
+    <script src="frontend/script.js"></script>
 </body>
 </html>
