--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Acuario - Dashboard Acuario 🐟</title>
-    <link rel="stylesheet" href="frontend/style.css">
-
+    <link rel="stylesheet" href="style.css">
 
     <!-- Chart.js -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
