fix: anterior.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,7 +30,7 @@
         <p>Última comida: <span id="ultimaComida">Cargando...</span></p>
         <p>Próxima comida: <span id="proximaComida">Cargando...</span></p>
 
-        <!-- button id="alimentarPez">Alimentar al pez</button> -->
+        <button id="alimentarPez">Alimentar al pez</button>
     </div>
 
     <!-- Tu script -->
